# myTaxPal

./: .env.example  .gitignore  BUGS_FEDERAL_CALCULATION.md  CODE_REVIEW.md  CODE_REVIEW_COMPARISON.md  CODE_REVIEW_INTERNATIONAL.md  CODE_REVIEW_PHASE3.md  CODE_REVIEW_PHASE3_ROUND2.md  CODE_REVIEW_STATE_LOCAL.md  README.md  REVIEW_ISSUES.md  conftest.py  pyproject.toml  verify_calculations.py
.claude/agents/: web-design-reviewer.md
rules/: REQUIREMENTS_COMPARISON_PARITY_2025-02-21.md  REQUIREMENTS_FIXES_ACROSS_BOARD_2025-02-21.md  exchange_rates.yaml  zip_jurisdictions.yaml
rules/countries/: VERIFICATION_ALL_COUNTRIES_2025.md
rules/federal/: 2025.yaml  FEDERAL_EDGE_CASES_2025.md  VERIFICATION_2025.md
rules/locals/: VERIFICATION_ALL_LOCALS_2025.md  de_wilmington.yaml  ky_louisville.yaml  md_baltimore.yaml  mi_detroit.yaml  mo_kansas_city.yaml  mo_st_louis.yaml  nj_newark.yaml  ny_nyc.yaml  ny_yonkers.yaml  oh_cincinnati.yaml  oh_cleveland.yaml  oh_columbus.yaml  pa_philadelphia.yaml  pa_pittsburgh.yaml
rules/states/: .gitkeep  VERIFICATION_ALL_STATES_2025.md  VERIFICATION_NO_INCOME_TAX.md  ak.yaml  al.yaml  al_VERIFICATION_2025.md  ar.yaml  ar_VERIFICATION_2025.md  az.yaml  az_VERIFICATION_2025.md  ca.yaml  co.yaml  (+48 more)
static/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_compare_cross_country.py  test_compare_golden.py  test_compare_income_routing.py  test_compare_invariants.py  test_detailed_breakdown.py  test_frontend.py  test_international.py  test_logging_config.py  test_rules_loader.py  test_schema.py  test_yaml_single_source_of_truth.py
(+129 files in other folders)
